- add UT - fix log name

--- a/conf/byzer-server-log4j.properties
+++ b/conf/byzer-server-log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=./logs/mlsql_engine.log
+log4j.appender.file.File=./logs/byzer.log
 log4j.appender.file.Append=true
 log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
 log4j.appender.file.rollingPolicy.fileNamePattern=./logs/byzer.%d.gz
