--- a/conf/byzer.properties
+++ b/conf/byzer.properties
@@ -1,8 +1,36 @@
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 
-# Byzer-lang running mode profiles: local/yarn/k8s
-byzer.mode=local
+# spark properties
+spark.master=local[*]
+spark.driver.memory=2g
+spark.sql.hive.thriftServer.singleSession=true
+spark.kryoserializer.buffer=256k
+spark.kryoserializer.buffer.max=1024m
+#spark.sql.shuffle.partitions=1
+spark.serializer=org.apache.spark.serializer.KryoSerializer
+spark.scheduler.mode=FAIR
+#spark.hadoop.mapreduce.job.run-local=true
+#spark.driver.maxResultSize=2g
+#spark.sql.codegen.wholeStage=true
+#spark.ui.allowFramingFrom=*
+#spark.files.maxPartitionBytes=10485760
 
-# Changeless properties
+# changeless properties
 streaming.rest=true
 streaming.platform=spark
 streaming.spark.service=true
@@ -11,7 +39,7 @@ streaming.spark.service=true
 streaming.name=byzer-lang
 streaming.driver.port=9003
 streaming.thrift=false
-streaming.enableHiveSupport=true
+streaming.enableHiveSupport=false
 #spark.mlsql.datalake.overwrite.hive=true
 #spark.mlsql.auth.access_token=mlsql
 #spark.mlsql.enable.max.result.limit=true
@@ -27,10 +55,8 @@ streaming.enableHiveSupport=true
 #streaming.workAs.schedulerService=false
 #streaming.workAs.schedulerService.consoleUrl=http:127.0.0.1:9002
 #streaming.workAs.schedulerService.consoleToken=mlsql
-
 #streaming.rest.intercept.clzz=streaming.rest.ExampleRestInterceptor
 #streaming.deploy.rest.api=true
-
 
 # meta store
 #streaming.metastore.db.type=mysql
@@ -40,21 +66,3 @@ streaming.enableHiveSupport=true
 #streaming.jobs=idf-compute
 #streaming.zk.servers=127.0.0.1
 #streaming.zk.conf_root_dir=/streamingpro/jack
-
-# spark properties
-spark.master=local[*]
-spark.driver.memory=2g
-spark.sql.hive.thriftServer.singleSession=true
-spark.kryoserializer.buffer=256k
-spark.kryoserializer.buffer.max=1024m
-#spark.sql.shuffle.partitions=1
-spark.serializer=org.apache.spark.serializer.KryoSerializer
-spark.scheduler.mode=FAIR
-#spark.hadoop.mapreduce.job.run-local=true
-#spark.driver.maxResultSize=2g
-#
-#spark.sql.codegen.wholeStage=true
-#spark.ui.allowFramingFrom=*
-#
-#
-#spark.files.maxPartitionBytes=10485760
