--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mockserver</artifactId>
+            <version>1.16.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
