--- a/conf/byzer-server-log4j.properties
+++ b/conf/byzer-server-log4j.properties
@@ -20,19 +20,19 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=./logs/byzer.log
+log4j.appender.file=org.apache.log4j.rolling.RollingFileAppender
+log4j.appender.file.File=./logs/byzer-lang.log
 log4j.appender.file.Append=true
 log4j.appender.file.rollingPolicy=org.apache.log4j.rolling.TimeBasedRollingPolicy
-log4j.appender.file.rollingPolicy.fileNamePattern=./logs/byzer.%d.gz
+log4j.appender.file.rollingPolicy.fileNamePattern=./logs/byzer-lang.%d.gz
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
 log4j.appender.file.MaxBackupIndex=20
 # Set the default spark-shell log level to WARN. When running the spark-shell, the
 # log level for this class is used to overwrite the root logger's log level, so that
 # the user can have different defaults for the shell and regular Spark apps.
+log4j.logger.org.apache.spark.repl.Main=WARN
 log4j.logger.org.apache.spark=WARN
-#log4j.logger.org.apache.spark=WARN
 # Settings to quiet third party logs that are too verbose
 log4j.logger.org.spark_project.jetty=WARN
 log4j.logger.org.spark_project.jetty.util.component.AbstractLifeCycle=ERROR
