add example for all-in-one & server mode.

--- a/conf/byzer.properties
+++ b/conf/byzer.properties
@@ -25,13 +25,13 @@ byzer.server.mode=server
 
 # spark properties
 spark.master=local[*]
-spark.driver.memory=2g
-spark.sql.hive.thriftServer.singleSession=true
-spark.kryoserializer.buffer=256k
-spark.kryoserializer.buffer.max=1024m
+#spark.driver.memory=2g
+#spark.sql.hive.thriftServer.singleSession=true
+#spark.kryoserializer.buffer=256k
+#spark.kryoserializer.buffer.max=1024m
 #spark.sql.shuffle.partitions=1
-spark.serializer=org.apache.spark.serializer.KryoSerializer
-spark.scheduler.mode=FAIR
+#spark.serializer=org.apache.spark.serializer.KryoSerializer
+#spark.scheduler.mode=FAIR
 #spark.hadoop.mapreduce.job.run-local=true
 #spark.driver.maxResultSize=2g
 #spark.sql.codegen.wholeStage=true
