--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>tech.mlsql</groupId>
     <artifactId>streamingpro_2.12</artifactId>
     <packaging>pom</packaging>
-    <version>2.3.0</version>
+    <version>2.3.0.1</version>
 
     <name>StreamingPro Parent POM</name>
     <url>https://github.com/allwefantasy/streamingpro</url>
@@ -979,6 +979,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.10.0</version>
             </plugin>
         </plugins>
     </build>
