--- a/streamingpro-assembly/pom.xml
+++ b/streamingpro-assembly/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>tech.mlsql</groupId>
         <artifactId>streamingpro_2.12</artifactId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
