--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>tech.mlsql</groupId>
     <artifactId>streamingpro_2.12</artifactId>
     <packaging>pom</packaging>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.3.3</version>
 
     <name>StreamingPro Parent POM</name>
     <url>https://github.com/allwefantasy/streamingpro</url>
@@ -980,6 +980,11 @@
                     </execution>
                 </executions>
             </plugin>
+	    <plugin>
+	      <groupId>org.codehaus.mojo</groupId>
+	      <artifactId>versions-maven-plugin</artifactId>
+	      <version>2.10.0</version>
+	    </plugin>
         </plugins>
     </build>
     <distributionManagement>
