--- a/streamingpro-it/pom.xml
+++ b/streamingpro-it/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro_2.12</artifactId>
         <groupId>tech.mlsql</groupId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <properties>
