--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,20 @@
         <!-- spark 2.4 end -->
 
         <!-- spark 3.0 start -->
-        <scala.version>2.12.10</scala.version> 
-        <scala.binary.version>2.12</scala.binary.version> 
-        <spark.version>3.1.1</spark.version> 
-        <spark.bigversion>3.0</spark.bigversion> 
-        <scalatest.version>3.0.3</scalatest.version> 
+<!--        <scala.version>2.12.10</scala.version> -->
+<!--        <scala.binary.version>2.12</scala.binary.version> -->
+<!--        <spark.version>3.1.1</spark.version> -->
+<!--        <spark.bigversion>3.0</spark.bigversion> -->
+<!--        <scalatest.version>3.0.3</scalatest.version> -->
         <!-- spark 3.0 end -->
+
+        <!-- spark 3.3 start -->
+        <scala.version>2.12.10</scala.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <spark.version>3.3.0</spark.version>
+        <spark.bigversion>3.3</spark.bigversion>
+        <scalatest.version>3.0.3</scalatest.version>
+        <!-- spark 3.3 end -->
 
         <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}
         </spark.streaming.kafka.artifactId>
@@ -464,16 +472,92 @@
 
 
         <profile>
-            <id>flink-1.4.2</id>
+            <id>spark-3.3.0</id>
+
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}
+                </spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
+                <spark.version>3.3.0</spark.version>
+                <spark.bigversion>3.3</spark.bigversion>
+            </properties>
             <modules>
-                <module>streamingpro-flink</module>
+                <module>streamingpro-spark-3.3.0-adaptor</module>
+                <module>streamingpro-dsl</module>
+                <module>streamingpro-mlsql</module>
+                <module>streamingpro-it</module>
+                <module>external/python-controller</module>
+                <module>external/mlsql-watcher</module>
+                <module>external/mlsql-mysql-store</module>
+                <module>external/mlsql-sql-profiler-30</module>
+                <module>external/mlsql-autosuggest</module>
             </modules>
             <dependencies>
+                <dependency>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>javax.servlet-api</artifactId>
+                    <version>3.1.0</version>
+                </dependency>
+
                 <dependency>
                     <groupId>net.csdn</groupId>
                     <artifactId>serviceframework-jetty-9-server_${scala.binary.version}</artifactId>
                     <version>${serviceframework.version}</version>
                     <exclusions>
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-server</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-http</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-io</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-continuation</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-util</artifactId>-->
+                        <!--</exclusion>-->
+                        <exclusion>
+                            <groupId>tech.mlsql</groupId>
+                            <artifactId>common-utils_${scala.binary.version}</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.eclipse.jetty</groupId>
+                            <artifactId>jetty-servlet</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>junit</groupId>
+                            <artifactId>junit</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.scala-lang</groupId>
+                            <artifactId>jline</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.alibaba</groupId>
+                            <artifactId>dubbo</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>delta-plus_${scala.binary.version}</artifactId>
+                    <version>${delta-plus-version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>tech.mlsql</groupId>
+                            <artifactId>streamingpro-common</artifactId>
+                        </exclusion>
                         <exclusion>
                             <groupId>tech.mlsql</groupId>
                             <artifactId>common-utils_${scala.binary.version}</artifactId>
@@ -482,6 +566,7 @@
                 </dependency>
             </dependencies>
         </profile>
+        
         <profile>
             <id>antlr4.7.1-maven</id>
             <modules>
