--- a/streamingpro-core/pom.xml
+++ b/streamingpro-core/pom.xml
@@ -9,27 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <!-- spark 2.4 start -->
-<!--         <scala.version>2.11.12</scala.version> -->
-<!--         <scala.binary.version>2.11</scala.binary.version> -->
-<!--         <spark.version>2.4.3</spark.version> -->
-<!--         <spark.bigversion>2.4</spark.bigversion> -->
-        <!-- spark 2.4 end -->
-
-        <!-- spark 3.0 start -->
-        <!--        <scala.version>2.12.10</scala.version> -->
-        <!--        <scala.binary.version>2.12</scala.binary.version> -->
-        <!--        <spark.version>3.1.1</spark.version> -->
-        <!--        <spark.bigversion>3.0</spark.bigversion> -->
-        <!--        <scalatest.version>3.0.3</scalatest.version> -->
-        <!-- spark 3.0 end -->
-
         <!-- spark 3.3 start -->
-        <scala.version>2.12.10</scala.version>
+        <scala.version>2.12.15</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.3.0</spark.version>
         <spark.bigversion>3.3</spark.bigversion>
-        <scalatest.version>3.0.3</scalatest.version>
+        <scalatest.version>3.2.13</scalatest.version>
         <!-- spark 3.3 end -->
     </properties>
     <artifactId>streamingpro-core-${spark.bigversion}_${scala.binary.version}</artifactId>
@@ -39,7 +24,7 @@
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.11.0.202103091610-r</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
@@ -172,7 +157,7 @@
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.binary.version}</artifactId>
-            <version>3.2.11</version>
+            <version>${scalatest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
