--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -9,28 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <!-- spark 2.4 start -->
-        <!--         <scala.version>2.11.12</scala.version> -->
-        <!--         <scala.binary.version>2.11</scala.binary.version> -->
-        <!--         <spark.version>2.4.3</spark.version> -->
-        <!--         <spark.bigversion>2.4</spark.bigversion> -->
-        <!--         <scalatest.version>3.0.3</scalatest.version> -->
-        <!-- spark 2.4 end -->
-
-        <!-- spark 3.0 start -->
-        <!--        <scala.version>2.12.10</scala.version> -->
-        <!--        <scala.binary.version>2.12</scala.binary.version> -->
-        <!--        <spark.version>3.1.1</spark.version> -->
-        <!--        <spark.bigversion>3.0</spark.bigversion> -->
-        <!--        <scalatest.version>3.0.3</scalatest.version> -->
-        <!-- spark 3.0 end -->
-
         <!-- spark 3.3 start -->
-        <scala.version>2.12.10</scala.version>
+        <scala.version>2.12.15</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.3.0</spark.version>
         <spark.bigversion>3.3</spark.bigversion>
-        <scalatest.version>3.0.3</scalatest.version>
+        <scalatest.version>3.2.13</scalatest.version>
         <!-- spark 3.3 end -->
     </properties>
     <artifactId>streamingpro-mlsql-spark_${spark.bigversion}_${scala.binary.version}</artifactId>
@@ -275,9 +259,50 @@
         </profile>
 
         <profile>
-            <id>chinese-analyzer-support</id>
+            <id>buildin-plugins</id>
             <dependencies>
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-ets-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
 
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>python-controller-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-sql-profiler-30-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-mysql-store-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-watcher-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-healthy-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>tech.mlsql</groupId>
+                    <artifactId>mlsql-autosuggest-${spark.bigversion}_${scala.binary.version}</artifactId>
+                    <version>${project.parent.version}</version>
+                </dependency>
             </dependencies>
         </profile>
 
@@ -335,48 +360,7 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>mlsql-ets-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
 
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>python-controller-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>mlsql-sql-profiler-30-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>mlsql-mysql-store-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>mlsql-watcher-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>mlsql-healthy-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>tech.mlsql</groupId>
-            <artifactId>mlsql-autosuggest-${spark.bigversion}_${scala.binary.version}</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
