Include external/mlsql-ets and external/mlsql-healthy in root pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,8 @@
         <module>external/mlsql-mysql-store</module>
         <module>external/mlsql-sql-profiler-30</module>
         <module>external/mlsql-autosuggest</module>
+        <module>external/mlsql-ets</module>
+        <module>external/mlsql-healthy</module>
     </modules>
 
     <properties>
