--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
         <hadoop-client-version>2.6.5</hadoop-client-version>
 
         <common-utils-version>0.3.9.5-SNAPSHOT</common-utils-version>
-        <serviceframework.version>2.0.7</serviceframework.version>
+        <serviceframework.version>2.0.9-SNAPSHOT</serviceframework.version>
 
         <pyjava-version>0.3.2</pyjava-version>
         <mlsql-scheduler-version>0.1.3</mlsql-scheduler-version>
