--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.10</version>
             </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
