--- a/streamingpro-mlsql/src/main/resources-local/log4j2.properties
+++ b/streamingpro-mlsql/src/main/resources-local/log4j2.properties
@@ -39,11 +39,17 @@ rootLogger.appenderRefs=file, console
 rootLogger.appenderRef.console.ref=STDOUT
 rootLogger.appenderRef.file.ref=File
 
-logger.storage.name=org.apache.spark.storage.BlockManager
+logger.storage.name=org.apache.spark.storage
 logger.storage.level=WARN
 
 logger.streamManager.name=streaming.core.stream.MLSQLStreamManager
 logger.streamManager.level = warn
+
+logger.scheduler.name=org.apache.spark.scheduler
+logger.scheduler.level = warn
+
+logger.executor.name=org.apache.spark.executor
+logger.executor.level = warn
 
 logger.jetty1.name = org.sparkproject.jetty
 logger.jetty1.level = warn
