Use serviceframework with log4j 2.x

--- a/external/mlsql-autosuggest/src/main/resources/log4j2.properties
+++ b/external/mlsql-autosuggest/src/main/resources/log4j2.properties
@@ -17,7 +17,7 @@
 # Set everything to be logged to the console
 property.filename=byzer-lang.log
 property.byzerLogHome=./logs
-rootLogger.level=info
+rootLogger.level=debug
 appenders=file, console
 
 appender.console.type=Console
@@ -39,16 +39,12 @@ rootLogger.appenderRefs=file, console
 rootLogger.appenderRef.console.ref=STDOUT
 rootLogger.appenderRef.file.ref=File
 
-logger.storage.name=org.apache.spark.storage
-logger.storage.level=warn
+logger.storage.name=org.apache.spark.storage.BlockManager
+logger.storage.level=WARN
 
-logger.repl.name = org.apache.spark.repl.Main
-logger.repl.level = warn
+logger.streamManager.name=streaming.core.stream.MLSQLStreamManager
+logger.streamManager.level = warn
 
-logger.thriftserver.name = org.apache.spark.sql.hive.thriftserver.SparkSQLCLIDriver
-logger.thriftserver.level = warn
-
-# Settings to quiet third party logs that are too verbose
 logger.jetty1.name = org.sparkproject.jetty
 logger.jetty1.level = warn
 logger.jetty2.name = org.sparkproject.jetty.util.component.AbstractLifeCycle
@@ -61,17 +57,3 @@ logger.parquet1.name = org.apache.parquet
 logger.parquet1.level = error
 logger.parquet2.name = parquet
 logger.parquet2.level = error
-
-# SPARK-9183: Settings to avoid annoying messages when looking up nonexistent UDFs in SparkSQL with Hive support
-logger.RetryingHMSHandler.name = org.apache.hadoop.hive.metastore.RetryingHMSHandler
-logger.RetryingHMSHandler.level = fatal
-logger.FunctionRegistry.name = org.apache.hadoop.hive.ql.exec.FunctionRegistry
-logger.FunctionRegistry.level = error
-
-# For deploying Spark ThriftServer
-# SPARK-34128: Suppress undesirable TTransportException warnings involved in THRIFT-4805
-appender.console.filter.1.type = RegexFilter
-appender.console.filter.1.regex = .*Thrift error occurred during processing of message.*
-appender.console.filter.1.onMatch = deny
-appender.console.filter.1.onMismatch = neutral
-
