基于XGBoost4J-Spark能力，可以通过byzer语法原生使用XGBoost算法，支持网格搜索超参数和多组参数等

--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -734,6 +734,16 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>ml.dmlc</groupId>
+            <artifactId>xgboost4j_${scala.binary.version}</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>ml.dmlc</groupId>
+            <artifactId>xgboost4j-spark_${scala.binary.version}</artifactId>
+            <version>1.6.2</version>
+        </dependency>
 
     </dependencies>
 
