--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -385,7 +385,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.11.2</version>
+            <version>${jsoup.version}</version>
         </dependency>
         <dependency>
             <groupId>us.codecraft</groupId>
