--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 
 
         <scope>provided</scope>
-        <hadoop-client-version>2.6.5</hadoop-client-version>
+        <hadoop-client-version>3.3.2</hadoop-client-version>
 
         <common-utils-version>0.3.9.5</common-utils-version>
         <serviceframework.version>2.0.9</serviceframework.version>
@@ -201,7 +201,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
+            <artifactId>hadoop-client-api</artifactId>
             <version>${hadoop-client-version}</version>
             <scope>${scope}</scope>
             <exclusions>
