Add log4j property files for assembly

--- a/conf/byzer-tools-log4j2.properties
+++ b/conf/byzer-tools-log4j2.properties
@@ -31,3 +31,29 @@ log4j.appender.file.MaxBackupIndex=20
 log4j.logger.org.apache.spark=WARN
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.tech.mlsql.tool=DEBUG
+
+
+property.filename=shell.stderr
+property.byzerLogHome=./logs
+rootLogger.level=info
+appenders=file, console
+
+appender.console.type=Console
+appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
+
+appender.file.type=RollingFile
+appender.file.name=File
+appender.file.fileName=${byzerLogHome}/${filename}
+appender.file.filePattern=${byzerLogHome}/${filename}.%d{yyyy-MM-dd}
+appender.file.layout.type=PatternLayout
+appender.file.layout.pattern=%d{yy/MM/dd HH:mm:ss} %X{owner} %p %c{1}: %m%n
+appender.file.policies.type=Policies
+appender.file.policies.time.type=TimeBasedTriggeringPolicy
+appender.file.policies.time.interval=1
+
+rootLogger.appenderRefs=file, console
+rootLogger.appenderRef.console.ref=STDOUT
+rootLogger.appenderRef.file.ref=File
+
