configure byzer server by byzer.server.* in byzer shell script

--- a/conf/byzer.properties.all-in-one.example
+++ b/conf/byzer.properties.all-in-one.example
@@ -1,8 +1,11 @@
 # override example for all-in-one package
 
 byzer.server.mode=all-in-one
+byzer.server.dryrun=false
 
-streaming.master=local[*]
+## define Byzer Engine memory size
+byzer.server.runtime.driver-memory=6g
+
 streaming.name=Byzer-lang-desktop
 streaming.rest=true
 streaming.thrift=false
