--- a/conf/byzer.properties.server.example
+++ b/conf/byzer.properties.server.example
@@ -1,8 +1,18 @@
 # override example for server package
 
 byzer.server.mode=server
+byzer.server.dryrun=false
 
-streaming.master=local[*]
+# submit byzer server as yarn-client mode
+byzer.server.runtime.master=yarn
+byzer.server.runtime.deploy-mode=client
+
+# configure resource for yarn mode
+byzer.server.runtime.dirver-memory=6g
+byzer.server.runtime.executor-memory=4g
+byzer.server.runtime.executor-cores=4
+byzer.server.runtime.num-executors=4
+
 streaming.name=Byzer-lang-server
 streaming.rest=true
 streaming.thrift=false
