all-in-one to support java startup arguments

--- a/conf/byzer.properties
+++ b/conf/byzer.properties
@@ -17,9 +17,9 @@
 
 
 # byzer engine server mode
-# byzer engine provides two server mode
-# - all-in-one: which allows user run byzer engine in a local mode, with open-jdk1.8 and spark jars embeded, user do not need to configure the $SPARK_HOME
-# - server: the user need to specify an external $SPARK_HOME (3.1.1 or 2.4.3), the byzer engine will be started by spark-submit command 
+# byzer engine provides two modes
+# - all-in-one: which allows the user run byzer-lang in a local mode, with open-jdk1.8 and spark jars embedded, user do not need to configure the $SPARK_HOME
+# - server: the user needs to specify an external $SPARK_HOME (3.1.1 or 2.4.3), the byzer engine will be started by spark-submit command
 byzer.server.mode=server
 
 
