--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
 
 
-        <guava.version>16.0</guava.version>
+        <guava.version>14.0.1</guava.version>
         <jetty.version>9.2.16.v20160414</jetty.version>
 
         <httpclient.version>4.5.13</httpclient.version>
@@ -121,7 +121,11 @@
 
     <dependencyManagement>
         <dependencies>
-
+<!--            <dependency>-->
+<!--                <groupId>com.google.guava</groupId>-->
+<!--                <artifactId>guava</artifactId>-->
+<!--                <version>14.0.1</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
