--- a/streamingpro-mlsql/pom.xml
+++ b/streamingpro-mlsql/pom.xml
@@ -305,6 +305,13 @@
     </profiles>
 
     <dependencies>
+
+        <dependency>
+            <groupId>tech.mlsql</groupId>
+            <artifactId>byzer-llm-3.3_2.12</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>tech.mlsql</groupId>
             <artifactId>mlsql-ets-${spark.bigversion}_${scala.binary.version}</artifactId>
